2001-01-07  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/builtins.c (boot_func): In the chain-loading mode,
	clear the active flag of each of the loaded partition entries,
	and then set the active flag of the booted partition image.
	
2001-01-04  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/builtins.c (embed_func): Call open_partition() even for
 	MBR, so that part_start is correct.  This fixes a bug reported by
 	Matthias Granberry <matthias@slurpee.org>.
	
2000-12-22  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (make_saved_active): Change the variable name
	``MBR'' to lower case.
	(set_partition_hidden_flag): Likewise.
	
2000-12-20  Jochen Hoenicke  <jochen@gnu.org>

	From Cedric Ware <ware@com.enst.fr>:
	* stage2/fsys_ext2.c (ext2fs_mount): Detect ext2 partitions in
	a OpenBSD/NetBSD FS_EXT2FS slice.
	* stage2/pc_slice.h (FS_ADOS): New Macro from OpenBSD/NetBSD.
	(FS_HFS): Likewise.
	(FS_FILECORE): Likewise.
	(FS_EXT2FS): Likewise.
	
2000-12-17  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/disk_io.c (rawread): Check if there is a EZD partition
	and remap sector 0 to sector 1 like EZ-BIOS does.
	(rawwrite): New function to write to disk.  Also does EZD
	remapping.
	(devwrite): New function.  Does the special remapping to
	partitions needed for linux.  This contains the code that was
	previously duplicated in embed_func and install_func at several
	places.
	(make_saved_active): Use rawwrite. Don't use SCRATCHSEG, as it is
	needed by devwrite.
	(set_partition_hidden_flag): Likewise.	
	* stage2/disk_io.h (rawwrite): New function.
	(devwrite): Likewise.
	* stage2/pc_slice.h (PC_SLICE_TYPE_EZD): New macro.
	* stage2/builtins.c (embed_info): New variable to store the
	position of the embedded stage1_5 for setup_func.
	(embed_func): Don't embed after the MBR if an EZ-BIOS is detected
	there.  Use the new devwrite method.  If embedding is successful
	store position in embed_info.
	(install_func): Use devwrite.  Don't use SCRATCHSEG.