@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH MBCHK "1" "December 2000" "mbchk (GNU GRUB 0.5.97)" FSF
+.TH MBCHK "1" "January 2001" "mbchk (GNU GRUB 0.5.97)" FSF
 .SH NAME
 mbchk \- check the format of a Multiboot kernel
 .SH SYNOPSIS
